---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/simple_math/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys
import types
def __cribo_init___cribo_fd4dde_utils():
    if '__cribo_fd4dde_utils' in sys.modules:
        return sys.modules['__cribo_fd4dde_utils']
    module = types.ModuleType('__cribo_fd4dde_utils')
    module.__file__ = __file__ if '__file__' in globals() else None
    sys.modules['__cribo_fd4dde_utils'] = module
    sys.modules['utils'] = module

    def format_result(operation, result):
        """Format operation result for display."""
        return f"{operation}: {result}"
    module.format_result = format_result
    return module
def __cribo_init___cribo_eb46d5_calculator():
    if '__cribo_eb46d5_calculator' in sys.modules:
        return sys.modules['__cribo_eb46d5_calculator']
    module = types.ModuleType('__cribo_eb46d5_calculator')
    module.__file__ = __file__ if '__file__' in globals() else None
    sys.modules['__cribo_eb46d5_calculator'] = module
    sys.modules['calculator'] = module

    def add(a, b):
        """Add two numbers."""
        return a + b
    module.add = add

    def multiply(a, b):
        """Multiply two numbers."""
        return a * b
    module.multiply = multiply
    return module
__cribo_modules = {'utils': '__cribo_fd4dde_utils', 'calculator': '__cribo_eb46d5_calculator'}
__cribo_init_functions = {'__cribo_fd4dde_utils': __cribo_init___cribo_fd4dde_utils, '__cribo_eb46d5_calculator': __cribo_init___cribo_eb46d5_calculator}
class CriboBundledFinder:

    def __init__(self, module_registry, init_functions):
        self.module_registry = module_registry
        self.init_functions = init_functions

    def find_spec(self, fullname, path, target=None):
        if fullname in self.module_registry:
            synthetic_name = self.module_registry[fullname]
            if synthetic_name not in sys.modules:
                init_func = self.init_functions.get(synthetic_name)
                if init_func:
                    init_func()
            import importlib.util

            class _DummyLoader:

                def create_module(self, spec):
                    return sys.modules.get(spec.name)

                def exec_module(self, module):
                    pass
            return importlib.util.spec_from_loader(fullname, _DummyLoader())
        return None
sys.meta_path.insert(0, CriboBundledFinder(__cribo_modules, __cribo_init_functions))
import calculator
add = calculator.add
multiply = calculator.multiply
import utils
format_result = utils.format_result
def main():
    result1 = add(5, 3)
    result2 = multiply(4, 7)
    print(format_result("Addition", result1))
    print(format_result("Multiplication", result2))
if __name__ == "__main__":
    main()
